# CipherX

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  main.rs  pass.rs
